# file_rename_tool

./: .gitignore  CONTRIBUTING.md  README.md  STRUCTURE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js  windows-build.js
.github/workflows/: release.yml
scripts/: build-all.js  collect-builds.js
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  generate_icons.js
src-tauri/src/: main.rs
